# gbc-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  TODO.md
compiler/: Cargo.toml
compiler/src/: compiler.rs  error.rs  generator.rs  lib.rs  mocks.rs
compiler/src/expression/: evaluator.rs  mod.rs
compiler/src/lexer/: file.rs  mod.rs
compiler/src/lexer/stage/: entry.rs  expression.rs  include.rs  macros.rs  mod.rs  value.rs
compiler/src/lexer/stage/value/: label_resolver.rs
compiler/src/lexer/token/: generator.rs  iterator.rs  symbol.rs
compiler/src/linker/: analyzer.rs  mod.rs  optimizer.rs  util.rs
compiler/src/linker/section/: entry.rs  mod.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  generator.rs  mocks.rs
crates/compiler/src/expression/: evaluator.rs  mod.rs
crates/compiler/src/lexer/: file.rs  mod.rs
crates/compiler/src/lexer/stage/: entry.rs  expression.rs  include.rs  macros.rs  value.rs
crates/compiler/src/lexer/stage/value/: label_resolver.rs
crates/compiler/src/lexer/token/: generator.rs  mod.rs  symbol.rs
crates/compiler/src/linker/: analysis.rs  analyzer.rs  mod.rs  optimizer.rs
crates/compiler/src/linker/section/: mod.rs
crates/decompiler/: Cargo.toml  TODO.md
crates/decompiler/src/: address_entry.rs  lib.rs
crates/file-io/src/: lib.rs
crates/gb-cpu/data/: LICENSE
crates/gb-cpu/gb-types/src/: flag.rs  instruction.rs  lib.rs  register.rs
crates/gb-cpu/src/: instructions.rs
crates/gbt/: .gitignore  README.md
crates/gbt/src/: animation.rs  compress.rs  logo.rs  main.rs  picture.rs  sgb.rs  util.rs
crates/gbt/src/lz4/: bits.rs  command.rs
crates/gbt/src/mmp/: command.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: analyzer.rs  main.rs  parser.rs  state.rs  types.rs
crates/lsp/src/emulator/: mod.rs
crates/project/: Cargo.toml
crates/project/src/: config.rs  lib.rs  reader.rs
decompiler/: Cargo.toml
decompiler/src/: address_entry.rs  error.rs  lib.rs
examples/: base.instr.html  ex.instr.html  instr.rs
file-io/: Cargo.toml
file-io/src/: lib.rs
gb-cpu/: Cargo.toml  build.rs
gb-cpu/data/: README.md
gb-cpu/examples/: instr.rs
gb-cpu/gb-types/: Cargo.toml
gb-cpu/gb-types/src/: argument.rs  instruction.rs  register.rs
gb-cpu/src/: instructions.rs  lib.rs
gbasm-cpu/: Cargo.toml
gbasm-cpu/examples/: base.instr.html  instr.rs
gbasm-cpu/src/: instructions.rs  lib.rs
gbasm-lib/: Cargo.toml
gbasm-lib/gbasm-cpu/: Cargo.toml
gbasm-lib/src/: compiler.rs  generator.rs  lib.rs
gbasm-lib/src/expression/: data.rs  evaluator.rs  mod.rs
gbasm-lib/src/lexer/: error.rs  mod.rs
gbasm-lib/src/lexer/stage/: entry.rs  expression.rs  include.rs  macros.rs  mod.rs  value.rs
gbasm-lib/src/lexer/token/: generator.rs  iterator.rs  mod.rs
gbasm-lib/src/linker/: mod.rs  optimizer.rs  section.rs  util.rs
gbasm-lib/src/linker/section/: entry.rs  mod.rs
gbc-lib/: Cargo.toml
gbc-lib/gbc-cpu/: Cargo.toml
gbc-lib/gbc-cpu/examples/: ex.instr.html  instr.rs
gbc-lib/gbc-cpu/src/: instructions.rs  lib.rs
gbc-lib/src/: compiler.rs  error.rs  generator.rs  lib.rs  mocks.rs  traits.rs
gbc-lib/src/expression/: data.rs  evaluator.rs  mod.rs
gbc-lib/src/lexer/: file.rs  mod.rs
gbc-lib/src/lexer/stage/: entry.rs  expression.rs  include.rs  macros.rs  value.rs
gbc-lib/src/lexer/stage/value/: label_resolver.rs
gbc-lib/src/lexer/token/: generator.rs  iterator.rs  mod.rs  symbol.rs  value.rs
gbc-lib/src/linker/: mod.rs  optimizer.rs  util.rs
gbc-lib/src/linker/section/: entry.rs  mod.rs
gbc-lib/src/lz4/: mod.rs
gbc-tools.nvim/: gbc-tools.nvim
gbc-tools.nvim/ftdetect/: gbc.vim
gbc-tools.nvim/lua/: gbc-tools.lua
gbc-tools.nvim/lua/gbc-tools/: build.lua  config.lua  debugger.lua  emulator.lua  inlay_hints.lua  outline.lua  runnables.lua  server_status.lua
gbc-tools.nvim/lua/gbc-tools/executors/: floaterm.lua  init.lua  termopen.lua
gbc-tools.nvim/lua/gbc-tools/utils/: utils.lua
gbc-tools.nvim/syntax/: GameBoy.vim  gbc.vim
gbt/: Cargo.toml  README.md
gbt/src/: animation.rs  compress.rs  lmms.rs  main.rs  mmp.rs  tiles.rs  util.rs
gbt/src/hgb/: mod.rs
gbt/src/lz4/: command.rs  mod.rs
gbt/src/mmp/: command.rs  lmms.rs  mod.rs  parser.rs
lsp/: Cargo.toml
lsp/src/: analyzer.rs  emulator.rs  main.rs  parser.rs  state.rs  types.rs
lsp/src/emulator/: mod.rs  process.rs  status.rs
project/: Cargo.toml
project/src/: config.rs  reader.rs
src/: app.rs  cli.rs  compiler.rs  config.rs  lib.rs  main.rs  reader.rs  traits.rs
src/cpu/: instructions.rs  mod.rs
src/lexer/: error.rs  expression.rs  include.rs  macros.rs  mocks.rs  mod.rs  token.rs  value.rs
src/lexer/stage/: entry.rs  expression.rs  include.rs  macros.rs  mod.rs  value.rs
src/lexer/token/: generator.rs  iterator.rs  mod.rs
