[workspace]
resolver = "2"
members = [
    "compiler",
    "decompiler",
    "file-io",
    "gb-cpu",
    "gb-cpu/gb-types",
    "gbt",
    "project",
    "."
]

[package]
name = "gbc"
version = "0.7.3"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.3"
serde = { version = "*", features = ["derive"] }
decompiler = { version = "0.1.0", path = "./decompiler" }
compiler = { version = "0.7.2", path = "./compiler" }
file-io = { version = "0.5.0", path = "./file-io" }
project = { version = "0.5.0", path = "./project" }
clap = "2.33.0"

[profile.dev.package.compiler]
opt-level = 3

[profile.release]
lto = 'fat'
codegen-units = 1

