[workspace]
resolver = "2"
members = [
    "compiler",
    "decompiler",
    "file-io",
    "gb-cpu",
    "gb-cpu/gb-types",
    "gbt",
    "project",
    "."
]

[package]
name = "gbc"
version = "0.8.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2021"

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
decompiler = { version = "0.1.0", path = "./decompiler" }
compiler = { version = "0.8.0", path = "./compiler" }
file-io = { version = "0.5.0", path = "./file-io" }
project = { version = "0.5.0", path = "./project" }
clap = "3.1.8"

[profile.dev.package.compiler]
# opt-level = 3

[profile.release]
lto = 'fat'
codegen-units = 1

