[workspace]
resolver = "2"
members = [
    "crates/compiler",
    "crates/decompiler",
    "crates/file-io",
    "crates/gb-cpu",
    "crates/gb-cpu/gb-types",
    "crates/gbt",
    "crates/lsp",
    "crates/project",
    "."
]

[package]
name = "gbc"
version = "0.11.1"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2021"

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
decompiler = { version = "0.1.0", path = "./crates/decompiler" }
compiler = { version = "0.9.0", path = "./crates/compiler" }
file-io = { version = "0.5.0", path = "./crates/file-io" }
project = { version = "0.5.0", path = "./crates/project" }
clap = "3.1.8"

[profile.dev.package.compiler]
# opt-level = 3

