[package]
name = "compiler"
version = "0.7.2"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"

[dependencies]
gb-cpu = { version = "0.5.0", path = "../gb-cpu"  }
file-io = { version = "0.5.0", path = "../file-io"  }
ordered-float = "1.0.1"
lazy_static = "1.3.0"
colored = "1.7"

[dev-dependencies]
regex = "1"

