[package]
name = "gb-cpu"
version = "0.5.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
gb-types = { version = "0.1.0", path ="./gb-types" }

[build-dependencies]
gb-types = { version = "0.1.0", path ="./gb-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

