[package]
name = "gbt"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"

[dependencies]
gbc-lib = { version = "0.5.0", path = "../gbc-lib"  }
clap = "2.33.0"
image = { version = "0.21", default-features=false, features=["png_codec", "gif_codec"] }
colored = "1.7"
base64 = "0.10.0"
serde-xml-rs = "0.3.0"
serde = { version = "1.0.0", features=["derive"] }

[profile.release]
lto = true

