[package]
name = "lsp"
version = "0.7.3"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.3"
serde = { version = "*", features = ["derive"] }
compiler = { version = "0.7.2", path = "../compiler" }
project = { version = "0.5.0", path = "../project" }
file-io = { version = "0.5.0", path = "../file-io" }
gbd = { version = "0.1.0", path = "../../gbd" }
lazy_static = "1.4.0"
serde_json = "1.0"
log = "*"
env_logger = "0.8.3"
tower-lsp = "0.14.1"
tokio = { version = "1.6", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
