[package]
name = "project"
version = "0.5.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.3"
serde = { version = "*", features = ["derive"] }
compiler = { version = "0.7.2", path = "../compiler"  }
file-io = { version = "0.5.0", path = "../file-io"  }

