[package]
name = "project"
version = "0.5.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2021"

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
compiler = { version = "0.8.0", path = "../compiler"  }
file-io = { version = "0.5.0", path = "../file-io"  }

