[package]
name = "compiler"
version = "0.9.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2021"

[dependencies]
gb-cpu = { version = "0.5.0", git = "https://gitlab.com/BonsaiDen/gb-cpu" }
file-io = { version = "0.5.0", path = "../file-io" }
ordered-float = "2.10"
lazy_static = "1.3.0"
colored = "2.0"
lsp-types = "0.93"

[dev-dependencies]
regex = "1.5"

