[package]
name = "lsp"
version = "0.9.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
edition = "2021"

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
compiler = { version = "0.9.0", path = "../compiler" }
project = { version = "0.5.0", path = "../project" }
file-io = { version = "0.5.0", path = "../file-io" }
lazy_static = "1.4.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
tower-lsp = "0.17.0"
tokio = { version = "1.6", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }

